RESOLVED FIXED 112131
[BlackBerry] Fix visible_units.h includes
https://bugs.webkit.org/show_bug.cgi?id=112131
Summary [BlackBerry] Fix visible_units.h includes
Alberto Garcia
Reported 2013-03-12 04:07:39 PDT
This file was renamed to VisibleUnits.h in r144911 http://trac.webkit.org/changeset/144911
Attachments
Patch (2.69 KB, patch)
2013-03-12 04:10 PDT, Alberto Garcia
cgarcia: review-
cgarcia: commit-queue-
Patch (2.98 KB, patch)
2013-03-12 04:37 PDT, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2013-03-12 04:10:18 PDT
WebKit Review Bot
Comment 2 2013-03-12 04:17:04 PDT
Attachment 192706 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/ChangeLog', u'Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp', u'Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp', u'Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp', u'Source/WebKit/blackberry/WebKitSupport/SpellingHandler.cpp']" exit_code: 1 Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp:40: Alphabetical sorting problem. [build/include_order] [4] Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:39: Alphabetical sorting problem. [build/include_order] [4] Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp:68: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 3 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3 2013-03-12 04:25:09 PDT
Comment on attachment 192706 [details] Patch Please, fix the style issues. Thanks!
Alberto Garcia
Comment 4 2013-03-12 04:37:06 PDT
Carlos Garcia Campos
Comment 5 2013-03-12 05:04:01 PDT
Comment on attachment 192709 [details] Patch Thanks
WebKit Review Bot
Comment 6 2013-03-12 05:14:09 PDT
Comment on attachment 192709 [details] Patch Clearing flags on attachment: 192709 Committed r145529: <http://trac.webkit.org/changeset/145529>
WebKit Review Bot
Comment 7 2013-03-12 05:14:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.