[BlackBerry] Fix visible_units.h includes https://bugs.webkit.org/show_bug.cgi?id=112131

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-03-12
Reviewed by Carlos Garcia Campos.

This file was renamed to VisibleUnits.h in r144911.

* WebKitSupport/DOMSupport.cpp:
* WebKitSupport/InputHandler.cpp:
* WebKitSupport/SelectionHandler.cpp:
* WebKitSupport/SpellingHandler.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@145529 bbb929c8-8fbe-4397-9dbb-9b2b20218538