third_party/WebKit/Source/WebKit/blackberry/WebKitSupport/SpellingHandler.cpp
@@ -10,7 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "InputHandler.h"
 #include "Range.h"
 #include "SpellChecker.h"
-#include "visible_units.h"
+#include "VisibleUnits.h"
 
 #include <BlackBerryPlatformIMF.h>
 #include <BlackBerryPlatformLog.h>
